@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2906 2004/05/09 21:13:36 druzus Exp $
+ * $Id: ChangeLog,v 1.2907 2004/05/09 23:39:57 druzus Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-05-09 17:16 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * include/hbdefs.h
+    ! Corrected HB_LL() definition for BCC
 
 2004-05-10 01:40 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
   * xharbour/source/rtl/str.c
